fix: Add missing min-height:0 to .sentence-eng-inner for grid collapse

--- a/Template/styling.css
+++ b/Template/styling.css
@@ -1668,6 +1668,7 @@ img {
 
 #sentenceEng > .sentence-eng-inner {
   overflow: hidden;
+  min-height: 0;
 }
 
 #sentenceEng:not(.is-collapsed) {
